# arxiv_script

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  article.py  arxiv-retrieve.py  arxiv-script.py  arxiv_script.py  data  dir_control.py  myscript.py  pyproject.toml  requirements.in  requirements.txt  retrieve.py  setup.py  todo.org
.github/workflows/: ci.yml  main.yml
reqs/: linting.txt
script/: .env  article.py  arxiv_script.py  path_control.py  retrieve.py
src/: .env  article.py  arxiv_script.py  arxiv_script.py.~env_vars~  parser.py  path_control.py  retrieve.py  setup.py
tests/: .env  test_article.py  test_arxiv_script.py  test_envvars.py  test_parser.py  test_path_control.py  test_retrieve.py
tests/test_directory/: test.bib
