[tool.poetry]
name = "arxiv-script"
version = "0.2.0"
description = "Command line tool to handle arXiv articles and their BibTeX entries."
authors = ["Florian Beck <flrn.beck@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/flrnbc/arxiv_script"
repository = "https://github.com/flrnbc/arxiv_script"
keywords = ["arxiv", "python", "click"]
include = [
	"LICENSE", 
	]
packages = [
	{ include = 'src'},
]

[tool.poetry.dependencies]
python = ">=3.6.1, <4" # >=3.6.1 to work with pre-commit
requests = "^2.25.1"
urllib3 = ">=1.23" # if not used, pytest gives a DeprecationWarning
click = "^7.1.2"
python-dotenv = "^0.17.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "^2.12.1"

[tool.black]
target_version = ['py36', 'py37', 'py38']
exclude = '''
(
	/(
	  	\.eggs
	  |	\.git
	  | \.github
	  | \.pytest_cache
	  |	build
	  | dist
	)/
)
'''
# compatibility with isort
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
ensure_newline_before_comments = true

[tool.pylint.messages_control]
# for Pylint's compatibility with Black
disable = "C0330, C0326"
# C0330: Wrong hanging indentation before block
# C0326: Bad whitespace (because Black adds whitespace
# around operators and brackets)

[tool.poetry.scripts]
axs = 'src:arxiv_script.cli'

[build-system]
requires = [
	"poetry-core>=1.0.0",
	# "setuptools!=50.0", 
	# "wheel",
	]
build-backend = "poetry.core.masonry.api"
